--- a/Program/index.html
+++ b/Program/index.html
@@ -25,25 +25,25 @@
                 <div id="Position">
                     <div id="PositionTitle" class="PropertiesContent">Position</div>
                     <div id="PositionNumber" class="PropertiesContent">
-                        x <input id="PositionX" type="number" class="InputNumber"/>
-                        y <input id="PositionY" type="number" class="InputNumber"/>
-                        z <input id="PositionZ" type="number" class="InputNumber"/>
+                        X <input id="PositionX" type="number" class="InputNumber"/>
+                        Y <input id="PositionY" type="number" class="InputNumber"/>
+                        Z <input id="PositionZ" type="number" class="InputNumber"/>
                     </div>
                 </div>
                 <div id="Scale">
                     <div id="ScaleTitle" class="PropertiesContent">Scale</div>
                     <div id="ScaleNumber" class="PropertiesContent">
-                        x <input id="ScaleX" type="number" class="InputNumber"/>
-                        y <input id="ScaleY" type="number" class="InputNumber"/>
-                        z <input id="ScaleZ" type="number" class="InputNumber"/>
+                        X <input id="ScaleX" type="number" class="InputNumber"/>
+                        Y <input id="ScaleY" type="number" class="InputNumber"/>
+                        Z <input id="ScaleZ" type="number" class="InputNumber"/>
                     </div>
                 </div>
                 <div id="Rotation">
                     <div id="RotationTitle" class="PropertiesContent">Rotation</div>
                     <div id="RotationNumber" class="PropertiesContent">
-                        x <input id="RotationX" type="number" class="InputNumber"/>
-                        y <input id="RotationY" type="number" class="InputNumber"/>
-                        z <input id="RotationZ" type="number" class="InputNumber"/>
+                        X <input id="RotationX" type="number" class="InputNumber"/>
+                        Y <input id="RotationY" type="number" class="InputNumber"/>
+                        Z <input id="RotationZ" type="number" class="InputNumber"/>
                     </div>
                 </div>
             </div>
