--- a/Program/index.html
+++ b/Program/index.html
@@ -12,8 +12,7 @@
                 <button id="ButtonSave" class="Button" onclick="onButtonSaveClick()"></button>
                 <button id="ButtonExport" class="Button"></button>
                 <button id="ButtonCube" class="Button"></button>
-                <button id="ButtonCameraMove" class="Button"></button>
-                <button id="ButtonCameraRotate" class="Button"></button>
+                <button id="ButtonCamera" class="Button"></button>
             </div>
             <div id="Hierarchy">
                 <div id="ItemCube"></div>
@@ -30,12 +29,12 @@
                         Z <input id="PositionZ" type="number" class="InputNumber"/>
                     </div>
                 </div>
-                <div id="Scale">
-                    <div id="ScaleTitle" class="PropertiesContent">Scale</div>
-                    <div id="ScaleNumber" class="PropertiesContent">
-                        X <input id="ScaleX" type="number" class="InputNumber"/>
-                        Y <input id="ScaleY" type="number" class="InputNumber"/>
-                        Z <input id="ScaleZ" type="number" class="InputNumber"/>
+                <div id="Size">
+                    <div id="SizeTitle" class="PropertiesContent">Size</div>
+                    <div id="SizeNumber" class="PropertiesContent">
+                        X <input id="SizeX" type="number" class="InputNumber"/>
+                        Y <input id="SizeY" type="number" class="InputNumber"/>
+                        Z <input id="SizeZ" type="number" class="InputNumber"/>
                     </div>
                 </div>
                 <div id="Rotation">
