--- a/Program/index.html
+++ b/Program/index.html
@@ -15,7 +15,7 @@
                 <button id="ButtonCamera" class="Button"></button>
             </div>
             <div id="Hierarchy">
-                <div id="ItemCube"></div>
+                <div id="ItemCuboid"></div>
             </div>
             <div id="Space">
                 <canvas id="Screen" width="400" height="400"></canvas>
@@ -29,20 +29,20 @@
                         Z <input id="PositionZ" type="number" class="InputNumber"/>
                     </div>
                 </div>
-                <div id="Size">
-                    <div id="SizeTitle" class="PropertiesContent">Size</div>
-                    <div id="SizeNumber" class="PropertiesContent">
-                        X <input id="SizeX" type="number" class="InputNumber"/>
-                        Y <input id="SizeY" type="number" class="InputNumber"/>
-                        Z <input id="SizeZ" type="number" class="InputNumber"/>
-                    </div>
-                </div>
                 <div id="Rotation">
                     <div id="RotationTitle" class="PropertiesContent">Rotation</div>
                     <div id="RotationNumber" class="PropertiesContent">
                         X <input id="RotationX" type="number" class="InputNumber"/>
                         Y <input id="RotationY" type="number" class="InputNumber"/>
                         Z <input id="RotationZ" type="number" class="InputNumber"/>
+                    </div>
+                </div>
+                <div id="Size"></div>
+                    <div id="SizeTitle" class="PropertiesContent">Size</div>
+                    <div id="SizeNumber" class="PropertiesContent">
+                        X <input id="SizeX" type="number" class="InputNumber"/>
+                        Y <input id="SizeY" type="number" class="InputNumber"/>
+                        Z <input id="SizeZ" type="number" class="InputNumber"/>
                     </div>
                 </div>
             </div>
