--- a/Program/index.html
+++ b/Program/index.html
@@ -13,6 +13,7 @@
                 <button id="ButtonExport" class="Button" onclick="onButtonExportClick()"></button>
                 <button id="ButtonCube" class="Button" onclick="addCube()"></button>
                 <button id="ButtonCamera" class="Button" onclick="onButtonCameraClick()"></button>
+                <input id="FileName" value="test" type="text"/>
             </div>
             <div id="Hierarchy">
                 <div id="ItemCuboid"></div>
